--- a/web/index/index.html
+++ b/web/index/index.html
@@ -32,74 +32,120 @@
 	<link rel="stylesheet" href="styles.css">
 
 	<!-- JavaScript -->
-	<script src="./services/main.js"></script>	
+	<script src="../services/main.mjs" type="module"></script>	
 </head>
 
 <body>
-		<div id="table" class="col-9">
-			<div class="player-view">
-			</div>
-			<div class="player-hand">
+	<div id="table" class="col-9">
+		<div class="player-view">
+		</div>
+		<div class="player-hand">
+			<div class="card-display"> 
+				<img src="../assets/cards/hearts/2.png">
+				<img class="rest" src="../assets/cards/hearts/3.png">
+				<img class="rest" src="../assets/cards/hearts/4.png">
+				<img class="rest" src="../assets/cards/hearts/5.png">
+				<img class="rest" src="../assets/cards/hearts/6.png">
+				<img class="rest" src="../assets/cards/hearts/7.png">
+				<img class="rest" src="../assets/cards/hearts/8.png">
+				<img class="rest" src="../assets/cards/hearts/9.png">
+				<img class="rest" src="../assets/cards/hearts/10.png">
+				<img class="rest" src="../assets/cards/spades/2.png">
+				<img class="rest" src="../assets/cards/spades/3.png">
+				<img class="rest" src="../assets/cards/spades/4.png">
+				<img class="rest" src="../assets/cards/spades/5.png">
+				<img class="rest" src="../assets/cards/spades/6.png">
+				<img class="rest" src="../assets/cards/spades/7.png">
+				<img class="rest" src="../assets/cards/spades/8.png">
+				<img class="rest" src="../assets/cards/spades/9.png">
+				<img class="rest" src="../assets/cards/spades/10.png">
+				<img class="rest" src="../assets/cards/diamonds/2.png">
+				<img class="rest" src="../assets/cards/diamonds/3.png">
+				<img class="rest" src="../assets/cards/diamonds/4.png">
+				<img class="rest" src="../assets/cards/diamonds/5.png">
+				<img class="rest" src="../assets/cards/diamonds/6.png">
+				<img class="rest" src="../assets/cards/diamonds/7.png">
+				<img class="rest" src="../assets/cards/diamonds/8.png">
+				<img class="rest" src="../assets/cards/diamonds/9.png">
+				<img class="rest" src="../assets/cards/diamonds/10.png">
+				<img class="rest" src="../assets/cards/clubs/2.png">
+				<img class="rest" src="../assets/cards/clubs/3.png">
+				<img class="rest" src="../assets/cards/clubs/4.png">
+				<img class="rest" src="../assets/cards/clubs/5.png">
+				<img class="rest" src="../assets/cards/clubs/6.png">
+				<img class="rest" src="../assets/cards/clubs/7.png">
+				<img class="rest" src="../assets/cards/clubs/8.png">
+				<img class="rest" src="../assets/cards/clubs/9.png">
+				<img class="rest" src="../assets/cards/clubs/10.png">
 			</div>
 		</div>
-		<div id="console" class="col-3">
-			<div class="chatroom-display">
-				<div class="chatroom-block">
-					<span class="chatroom-user">Some user:</span>
-					<span class="chatroom-message">This is a message that says things just to test how everything displays.</span>
-				</div>
-				<div class="chatroom-block">
-					<span class="chatroom-user">Other person:</span>
-					<span class="chatroom-message">This is another message that says things just to test how everything displays.</span>
-				</div>
-				<div class="chatroom-block">
-					<span class="chatroom-command">This is an important command.</span>
-				</div>
-				<div class="chatroom-block">
-					<span class="chatroom-user current-user">Current user:</span>
-					<span class="chatroom-message">This is a message that says things just to test how everything displays.</span>
-				</div>
-				<div class="chatroom-block">
-					<span class="chatroom-user">Other person:</span>
-					<span class="chatroom-message">This is another message that says things just to test how everything displays.</span>
-				</div>
-				<div class="chatroom-block">
-					<span class="chatroom-user">Some user:</span>
-					<span class="chatroom-message">This is a message that says things just to test how everything displays.</span>
-				</div>
-				<div class="chatroom-block">
-					<span class="chatroom-user current-user">Current user:</span>
-					<span class="chatroom-message">This is another message that says things just to test how everything displays.</span>
-				</div>
-				<div class="chatroom-block">
-					<span class="chatroom-user">Some user:</span>
-					<span class="chatroom-message">This is a message that says things just to test how everything displays.</span>
-				</div>
-				<div class="chatroom-block">
-					<span class="chatroom-command">A trump card has been played.</span>
-				</div>
-				<div class="chatroom-block">
-					<span class="chatroom-user  current-user">Current user:</span>
-					<span class="chatroom-message">This is another message that says things just to test how everything displays.</span>
-				</div>
-				<div class="chatroom-block">
-					<span class="chatroom-user">Some user:</span>
-					<span class="chatroom-message">This is a message that says things just to test how everything displays.</span>
-				</div>
-				<div class="chatroom-block">
-					<span class="chatroom-user">Other person:</span>
-					<span class="chatroom-message">This is another message that says things just to test how everything displays.</span>
-				</div>
+	</div>
+	<div id="console" class="col-3">
+		<div class="chatroom-display">
+			<div class="chatroom-block">
+				<span class="chatroom-user">Some user:</span>
+				<span class="chatroom-message">This is a message that says things just to test how everything displays.</span>
 			</div>
-			<textarea name="comment" form="message" class="chatroom-user-input" placeholder="Type a message here..."></textarea>
+			<div class="chatroom-block">
+				<span class="chatroom-user">Other person:</span>
+				<span class="chatroom-message">This is another message that says things just to test how everything displays.</span>
+			</div>
+			<div class="chatroom-block">
+				<span class="chatroom-command">This is an important command.</span>
+			</div>
+			<div class="chatroom-block">
+				<span class="chatroom-user current-user">Current user:</span>
+				<span class="chatroom-message">This is a message that says things just to test how everything displays.</span>
+			</div>
+			<div class="chatroom-block">
+				<span class="chatroom-user">Other person:</span>
+				<span class="chatroom-message">This is another message that says things just to test how everything displays.</span>
+			</div>
+			<div class="chatroom-block">
+				<span class="chatroom-user">Some user:</span>
+				<span class="chatroom-message">This is a message that says things just to test how everything displays.</span>
+			</div>
+			<div class="chatroom-block">
+				<span class="chatroom-user current-user">Current user:</span>
+				<span class="chatroom-message">This is another message that says things just to test how everything displays.</span>
+			</div>
+			<div class="chatroom-block">
+				<span class="chatroom-user">Some user:</span>
+				<span class="chatroom-message">This is a message that says things just to test how everything displays.</span>
+			</div>
+			<div class="chatroom-block">
+				<span class="chatroom-command">A trump card has been played.</span>
+			</div>
+			<div class="chatroom-block">
+				<span class="chatroom-user  current-user">Current user:</span>
+				<span class="chatroom-message">This is another message that says things just to test how everything displays.</span>
+			</div>
+			<div class="chatroom-block">
+				<span class="chatroom-user">Some user:</span>
+				<span class="chatroom-message">This is a message that says things just to test how everything displays.</span>
+			</div>
+			<div class="chatroom-block">
+				<span class="chatroom-user">Other person:</span>
+				<span class="chatroom-message">This is another message that says things just to test how everything displays.</span>
+			</div>
+			<div class="chatroom-block">
+				<span class="chatroom-user">Some user:</span>
+				<span class="chatroom-message">This is a message that says things just to test how everything displays.</span>
+			</div>
+			<div class="chatroom-block">
+				<span class="chatroom-user">Other person:</span>
+				<span class="chatroom-message">This is another message that says things just to test how everything displays.</span>
 			</div>
 		</div>
+		<textarea name="comment" form="message" class="chatroom-user-input" placeholder="Type a message here..."></textarea>
+	</div>
+</div>
 
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 
 </html>
