--- a/web/index/index.html
+++ b/web/index/index.html
@@ -31,6 +31,9 @@
 	<!-- CSS -->
 	<link rel="stylesheet" href="styles.css">
 
+	<!-- JavaScript -->
+	<script src="../services/axios/axios.min.js"></script>
+	<script src="./main.mjs" type="module"></script>	
 </head>
 
 <body>
