--- a/web/index/index.html
+++ b/web/index/index.html
@@ -39,6 +39,57 @@
 <body>
 	<div id="table" class="col-9">
 		<div class="player-view">
+			<div class="view-left col-2">
+				<div class="left-player">
+					<img class="back" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+				</div>
+			</div>
+			<div class="view-top col-8">
+				<div class="top-player">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back" src="../assets/cards/back.png">
+				</div>
+			</div>
+			<div class="view-right col-2">
+				<div class="right-player">
+					<img class="back" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+					<img class="back rest" src="../assets/cards/back.png">
+				</div>
+			</div>
 		</div>
 		<div class="player-bottom">
 			<div class="player-hand">
