--- a/web/index/index.html
+++ b/web/index/index.html
@@ -40,93 +40,130 @@
 	<div id="table" class="col-9">
 		<div class="player-view">
 			<div class="view-left col-2">
-				<div class="left-player">
-					<img class="back" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
+				<div class="player-left">
+					<div class="player-left-hand">
+						<img class="playing-card" src="../assets/cards/back/left.png">
+						<img class="playing-card rest" src="../assets/cards/back/left.png">
+						<img class="playing-card rest" src="../assets/cards/back/left.png">
+						<img class="playing-card rest" src="../assets/cards/back/left.png">
+						<img class="playing-card rest" src="../assets/cards/back/left.png">
+						<img class="playing-card rest" src="../assets/cards/back/left.png">
+						<img class="playing-card rest" src="../assets/cards/back/left.png">
+						<img class="playing-card rest" src="../assets/cards/back/left.png">
+						<img class="playing-card rest" src="../assets/cards/back/left.png">
+						<img class="playing-card rest" src="../assets/cards/back/left.png">
+						<img class="playing-card rest" src="../assets/cards/back/left.png">
+						<img class="playing-card rest" src="../assets/cards/back/left.png">
+						<img class="playing-card rest" src="../assets/cards/back/left.png">
+						<img class="playing-card rest" src="../assets/cards/back/left.png">
+						<img class="playing-card rest" src="../assets/cards/back/left.png">
+						<img class="playing-card rest" src="../assets/cards/back/left.png">
+						<img class="playing-card rest" src="../assets/cards/back/left.png">
+						<img class="playing-card rest" src="../assets/cards/back/left.png">
+						<img class="playing-card rest" src="../assets/cards/back/left.png">
+						<img class="playing-card rest" src="../assets/cards/back/left.png">
+						<img class="playing-card rest" src="../assets/cards/back/left.png">
+					</div>
 				</div>
 			</div>
-			<div class="view-top col-8">
-				<div class="top-player">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back" src="../assets/cards/back.png">
+			<div class="view-center col-8">
+				<div class="view-top">
+					<div class="player-top">
+						<div class="player-top-hand">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card rest" src="../assets/cards/back/top.png">
+							<img class="playing-card" src="../assets/cards/back/top.png">
+						</div>
+					</div>
+				</div>
+				<div class="view-center">
 				</div>
 			</div>
 			<div class="view-right col-2">
-				<div class="right-player">
-					<img class="back" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
-					<img class="back rest" src="../assets/cards/back.png">
+				<div class="player-right">
+					<div class="player-right-hand">
+						<img class="playing-card" src="../assets/cards/back/right.png">
+						<img class="playing-card rest" src="../assets/cards/back/right.png">
+						<img class="playing-card rest" src="../assets/cards/back/right.png">
+						<img class="playing-card rest" src="../assets/cards/back/right.png">
+						<img class="playing-card rest" src="../assets/cards/back/right.png">
+						<img class="playing-card rest" src="../assets/cards/back/right.png">
+						<img class="playing-card rest" src="../assets/cards/back/right.png">
+						<img class="playing-card rest" src="../assets/cards/back/right.png">
+						<img class="playing-card rest" src="../assets/cards/back/right.png">
+						<img class="playing-card rest" src="../assets/cards/back/right.png">
+						<img class="playing-card rest" src="../assets/cards/back/right.png">
+						<img class="playing-card rest" src="../assets/cards/back/right.png">
+						<img class="playing-card rest" src="../assets/cards/back/right.png">
+						<img class="playing-card rest" src="../assets/cards/back/right.png">
+						<img class="playing-card rest" src="../assets/cards/back/right.png">
+						<img class="playing-card rest" src="../assets/cards/back/right.png">
+						<img class="playing-card rest" src="../assets/cards/back/right.png">
+						<img class="playing-card rest" src="../assets/cards/back/right.png">
+						<img class="playing-card rest" src="../assets/cards/back/right.png">
+						<img class="playing-card rest" src="../assets/cards/back/right.png">
+					</div>
 				</div>
 			</div>
 		</div>
 		<div class="player-bottom">
 			<div class="player-hand">
 				<div class="card-display"> 
-					<img class="card" src="../assets/cards/hearts/2.png">
-					<img class="card rest" src="../assets/cards/hearts/3.png">
-					<img class="card rest" src="../assets/cards/hearts/4.png">
-					<img class="card rest" src="../assets/cards/hearts/5.png">
-					<img class="card rest" src="../assets/cards/hearts/6.png">
-					<img class="card rest" src="../assets/cards/hearts/7.png">
-					<img class="card rest" src="../assets/cards/hearts/8.png">
-					<img class="card rest selected" src="../assets/cards/hearts/9.png">
-					<img class="card rest" src="../assets/cards/spades/2.png">
-					<img class="card rest" src="../assets/cards/spades/3.png">
-					<img class="card rest" src="../assets/cards/spades/4.png">
-					<img class="card rest" src="../assets/cards/spades/5.png">
-					<img class="card rest" src="../assets/cards/spades/6.png">
-					<img class="card rest" src="../assets/cards/spades/7.png">
-					<img class="card rest" src="../assets/cards/spades/8.png">
-					<img class="card rest" src="../assets/cards/spades/9.png">
-					<img class="card rest" src="../assets/cards/spades/10.png">
-					<img class="card rest" src="../assets/cards/diamonds/2.png">
-					<img class="card rest" src="../assets/cards/diamonds/3.png">
-					<img class="card rest" src="../assets/cards/diamonds/4.png">
-					<img class="card rest" src="../assets/cards/diamonds/5.png">
-					<img class="card rest" src="../assets/cards/diamonds/6.png">
-					<img class="card rest" src="../assets/cards/diamonds/7.png">
-					<img class="card rest" src="../assets/cards/diamonds/8.png">
-					<img class="card rest" src="../assets/cards/diamonds/9.png">
-					<img class="card rest" src="../assets/cards/clubs/2.png">
-					<img class="card rest" src="../assets/cards/clubs/3.png">
-					<img class="card rest" src="../assets/cards/clubs/4.png">
-					<img class="card rest" src="../assets/cards/clubs/5.png">
-					<img class="card rest" src="../assets/cards/clubs/6.png">
-					<img class="card rest" src="../assets/cards/clubs/7.png">
-					<img class="card rest" src="../assets/cards/clubs/8.png">
-					<img class="card rest" src="../assets/cards/clubs/9.png">
+					<img class="playing-card" src="../assets/cards/hearts/2.png">
+					<img class="playing-card rest" src="../assets/cards/hearts/3.png">
+					<img class="playing-card rest" src="../assets/cards/hearts/4.png">
+					<img class="playing-card rest" src="../assets/cards/hearts/5.png">
+					<img class="playing-card rest" src="../assets/cards/hearts/6.png">
+					<img class="playing-card rest" src="../assets/cards/hearts/7.png">
+					<img class="playing-card rest" src="../assets/cards/hearts/8.png">
+					<img class="playing-card rest selected" src="../assets/cards/hearts/9.png">
+					<img class="playing-card rest" src="../assets/cards/spades/2.png">
+					<img class="playing-card rest" src="../assets/cards/spades/3.png">
+					<img class="playing-card rest" src="../assets/cards/spades/4.png">
+					<img class="playing-card rest" src="../assets/cards/spades/5.png">
+					<img class="playing-card rest" src="../assets/cards/spades/6.png">
+					<img class="playing-card rest" src="../assets/cards/spades/7.png">
+					<img class="playing-card rest" src="../assets/cards/spades/8.png">
+					<img class="playing-card rest" src="../assets/cards/spades/9.png">
+					<img class="playing-card rest" src="../assets/cards/spades/10.png">
+					<img class="playing-card rest" src="../assets/cards/diamonds/2.png">
+					<img class="playing-card rest" src="../assets/cards/diamonds/3.png">
+					<img class="playing-card rest" src="../assets/cards/diamonds/4.png">
+					<img class="playing-card rest" src="../assets/cards/diamonds/5.png">
+					<img class="playing-card rest" src="../assets/cards/diamonds/6.png">
+					<img class="playing-card rest" src="../assets/cards/diamonds/7.png">
+					<img class="playing-card rest" src="../assets/cards/diamonds/8.png">
+					<img class="playing-card rest" src="../assets/cards/diamonds/9.png">
+					<img class="playing-card rest" src="../assets/cards/clubs/2.png">
+					<img class="playing-card rest" src="../assets/cards/clubs/3.png">
+					<img class="playing-card rest" src="../assets/cards/clubs/4.png">
+					<img class="playing-card rest" src="../assets/cards/clubs/5.png">
+					<img class="playing-card rest" src="../assets/cards/clubs/6.png">
+					<img class="playing-card rest" src="../assets/cards/clubs/7.png">
+					<img class="playing-card rest" src="../assets/cards/clubs/8.png">
+					<img class="playing-card rest" src="../assets/cards/clubs/9.png">
 				</div>
 			</div>
 		</div>
@@ -150,16 +187,16 @@
 </div>
 
 
-	
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-	<!-- JavaScript -->
-	<script src="./index.js"></script>	
-	<script src="./main.mjs" type="module"></script>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+<!-- JavaScript -->
+<script src="./index.js"></script>	
+<script src="./main.mjs" type="module"></script>
 
 </body>
 
