removed initial chat in chatroom

--- a/web/index/index.html
+++ b/web/index/index.html
@@ -169,19 +169,7 @@
 		</div>
 	</div>
 	<div id="console" class="col-3">
-		<div class="chatroom-display">
-			<div class="chatroom-block">
-				<span class="chatroom-user">Some user:</span>
-				<span class="chatroom-message">This is a message that says things just to test how everything displays.</span>
-			</div>
-			<div class="chatroom-block">
-				<span class="chatroom-command">This is an important command.</span>
-			</div>
-			<div class="chatroom-block">
-				<span class="chatroom-user current-user">Current user:</span>
-				<span class="chatroom-message">This is a message that says things just to test how everything displays.</span>
-			</div>
-		</div>
+		<div class="chatroom-display"></div>
 		<textarea name="comment" form="message" class="chatroom-user-input" placeholder="Type a message here..."></textarea>
 	</div>
 </div>
