--- a/web/index/index.html
+++ b/web/index/index.html
@@ -40,7 +40,7 @@
 	<div id="table" class="col-9">
 		<div class="player-view">
 			<div class="view-left col-2">
-				<div class="player-left">
+				<div id="left" class="player-left">
 					<div class="player-left-hand">
 						<img class="playing-card" src="../assets/cards/back/left.png">
 						<img class="playing-card rest" src="../assets/cards/back/left.png">
@@ -67,7 +67,7 @@
 				</div>
 			</div>
 			<div class="view-center col-8">
-				<div class="view-top">
+				<div id="top" class="view-top">
 					<div class="player-top">
 						<div class="player-top-hand">
 							<img class="playing-card rest" src="../assets/cards/back/top.png">
@@ -102,7 +102,7 @@
 				</div>
 			</div>
 			<div class="view-right col-2">
-				<div class="player-right">
+				<div id="right" class="player-right">
 					<div class="player-right-hand">
 						<img class="playing-card" src="../assets/cards/back/right.png">
 						<img class="playing-card rest" src="../assets/cards/back/right.png">
@@ -128,9 +128,15 @@
 				</div>
 			</div>
 		</div>
-		<div class="player-bottom">
-			<div class="player-hand">
-				<div class="card-display"> 
+		<div class="view-bottom">
+			<div class="player-submission">
+			</div>
+			<div class="player-buttons">
+				<button>Play cards</button>
+				<button class="clear-selection">Clear selection</button>
+			</div>
+			<div id="bottom" class="player-bottom">
+				<div class="player-bottom-hand"> 
 					<img class="playing-card" src="../assets/cards/hearts/2.png">
 					<img class="playing-card rest" src="../assets/cards/hearts/3.png">
 					<img class="playing-card rest" src="../assets/cards/hearts/4.png">
