Changed z-index of buttons

--- a/web/index/index.html
+++ b/web/index/index.html
@@ -137,6 +137,7 @@
 			</div>
 			<div id="bottom" class="player-bottom">
 				<div class="player-bottom-hand"> 
+					<div id="2H" class="playing-card"></div>
 					<img class="playing-card" src="../assets/cards/hearts/2.png">
 					<img class="playing-card rest" src="../assets/cards/hearts/3.png">
 					<img class="playing-card rest" src="../assets/cards/hearts/4.png">
