ACTUAL z-index change

--- a/web/index/index.html
+++ b/web/index/index.html
@@ -137,8 +137,24 @@
 			</div>
 			<div id="bottom" class="player-bottom">
 				<div class="player-bottom-hand"> 
-					<div id="2H" class="playing-card"></div>
-					<img class="playing-card" src="../assets/cards/hearts/2.png">
+					<div id="H2" class="playing-card-image"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<!-- 
 					<img class="playing-card rest" src="../assets/cards/hearts/3.png">
 					<img class="playing-card rest" src="../assets/cards/hearts/4.png">
 					<img class="playing-card rest" src="../assets/cards/hearts/5.png">
@@ -170,7 +186,7 @@
 					<img class="playing-card rest" src="../assets/cards/clubs/6.png">
 					<img class="playing-card rest" src="../assets/cards/clubs/7.png">
 					<img class="playing-card rest" src="../assets/cards/clubs/8.png">
-					<img class="playing-card rest" src="../assets/cards/clubs/9.png">
+					<img class="playing-card rest" src="../assets/cards/clubs/9.png"> -->
 				</div>
 			</div>
 		</div>
