--- a/web/index/index.html
+++ b/web/index/index.html
@@ -154,6 +154,22 @@
 					<div id="H2" class="playing-card-image rest"></div>
 					<div id="H2" class="playing-card-image rest"></div>
 					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
+					<div id="H2" class="playing-card-image rest"></div>
 					<!-- 
 					<img class="playing-card rest" src="../assets/cards/hearts/3.png">
 					<img class="playing-card rest" src="../assets/cards/hearts/4.png">
