--- a/web/index/index.html
+++ b/web/index/index.html
@@ -42,27 +42,38 @@
 			<div class="view-left col-2">
 				<div id="left" class="player-left">
 					<div class="player-left-hand">
-						<img class="playing-card" src="../assets/cards/back/left.png">
-						<img class="playing-card rest" src="../assets/cards/back/left.png">
-						<img class="playing-card rest" src="../assets/cards/back/left.png">
-						<img class="playing-card rest" src="../assets/cards/back/left.png">
-						<img class="playing-card rest" src="../assets/cards/back/left.png">
-						<img class="playing-card rest" src="../assets/cards/back/left.png">
-						<img class="playing-card rest" src="../assets/cards/back/left.png">
-						<img class="playing-card rest" src="../assets/cards/back/left.png">
-						<img class="playing-card rest" src="../assets/cards/back/left.png">
-						<img class="playing-card rest" src="../assets/cards/back/left.png">
-						<img class="playing-card rest" src="../assets/cards/back/left.png">
-						<img class="playing-card rest" src="../assets/cards/back/left.png">
-						<img class="playing-card rest" src="../assets/cards/back/left.png">
-						<img class="playing-card rest" src="../assets/cards/back/left.png">
-						<img class="playing-card rest" src="../assets/cards/back/left.png">
-						<img class="playing-card rest" src="../assets/cards/back/left.png">
-						<img class="playing-card rest" src="../assets/cards/back/left.png">
-						<img class="playing-card rest" src="../assets/cards/back/left.png">
-						<img class="playing-card rest" src="../assets/cards/back/left.png">
-						<img class="playing-card rest" src="../assets/cards/back/left.png">
-						<img class="playing-card rest" src="../assets/cards/back/left.png">
+						<img class="playing-card" src="../assets/cards/hearts/2.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/3.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/4.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/5.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/6.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/7.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/8.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/9.png">
+						<img class="playing-card rest" src="../assets/cards/spades/2.png">
+						<img class="playing-card rest" src="../assets/cards/spades/3.png">
+						<img class="playing-card rest" src="../assets/cards/spades/4.png">
+						<img class="playing-card rest" src="../assets/cards/spades/5.png">
+						<img class="playing-card rest" src="../assets/cards/spades/6.png">
+						<img class="playing-card rest" src="../assets/cards/spades/7.png">
+						<img class="playing-card rest" src="../assets/cards/spades/8.png">
+						<img class="playing-card rest" src="../assets/cards/spades/9.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/2.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/3.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/4.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/5.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/6.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/7.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/8.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/9.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/2.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/3.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/4.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/5.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/6.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/7.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/8.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/9.png">
 					</div>
 				</div>
 			</div>
@@ -70,31 +81,38 @@
 				<div id="top" class="view-top">
 					<div class="player-top">
 						<div class="player-top-hand">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card rest" src="../assets/cards/back/top.png">
-							<img class="playing-card" src="../assets/cards/back/top.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/2.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/3.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/4.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/5.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/6.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/7.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/8.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/9.png">
+						<img class="playing-card rest" src="../assets/cards/spades/2.png">
+						<img class="playing-card rest" src="../assets/cards/spades/3.png">
+						<img class="playing-card rest" src="../assets/cards/spades/4.png">
+						<img class="playing-card rest" src="../assets/cards/spades/5.png">
+						<img class="playing-card rest" src="../assets/cards/spades/6.png">
+						<img class="playing-card rest" src="../assets/cards/spades/7.png">
+						<img class="playing-card rest" src="../assets/cards/spades/8.png">
+						<img class="playing-card rest" src="../assets/cards/spades/9.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/2.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/3.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/4.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/5.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/6.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/7.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/8.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/9.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/2.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/3.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/4.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/5.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/6.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/7.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/8.png">
+						<img class="playing-card" src="../assets/cards/clubs/9.png">
 						</div>
 					</div>
 				</div>
@@ -104,26 +122,38 @@
 			<div class="view-right col-2">
 				<div id="right" class="player-right">
 					<div class="player-right-hand">
-						<img class="playing-card" src="../assets/cards/back/right.png">
-						<img class="playing-card rest" src="../assets/cards/back/right.png">
-						<img class="playing-card rest" src="../assets/cards/back/right.png">
-						<img class="playing-card rest" src="../assets/cards/back/right.png">
-						<img class="playing-card rest" src="../assets/cards/back/right.png">
-						<img class="playing-card rest" src="../assets/cards/back/right.png">
-						<img class="playing-card rest" src="../assets/cards/back/right.png">
-						<img class="playing-card rest" src="../assets/cards/back/right.png">
-						<img class="playing-card rest" src="../assets/cards/back/right.png">
-						<img class="playing-card rest" src="../assets/cards/back/right.png">
-						<img class="playing-card rest" src="../assets/cards/back/right.png">
-						<img class="playing-card rest" src="../assets/cards/back/right.png">
-						<img class="playing-card rest" src="../assets/cards/back/right.png">
-						<img class="playing-card rest" src="../assets/cards/back/right.png">
-						<img class="playing-card rest" src="../assets/cards/back/right.png">
-						<img class="playing-card rest" src="../assets/cards/back/right.png">
-						<img class="playing-card rest" src="../assets/cards/back/right.png">
-						<img class="playing-card rest" src="../assets/cards/back/right.png">
-						<img class="playing-card rest" src="../assets/cards/back/right.png">
-						<img class="playing-card rest" src="../assets/cards/back/right.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/2.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/3.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/4.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/5.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/6.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/7.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/8.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/9.png">
+						<img class="playing-card rest" src="../assets/cards/spades/2.png">
+						<img class="playing-card rest" src="../assets/cards/spades/3.png">
+						<img class="playing-card rest" src="../assets/cards/spades/4.png">
+						<img class="playing-card rest" src="../assets/cards/spades/5.png">
+						<img class="playing-card rest" src="../assets/cards/spades/6.png">
+						<img class="playing-card rest" src="../assets/cards/spades/7.png">
+						<img class="playing-card rest" src="../assets/cards/spades/8.png">
+						<img class="playing-card rest" src="../assets/cards/spades/9.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/2.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/3.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/4.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/5.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/6.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/7.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/8.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/9.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/2.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/3.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/4.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/5.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/6.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/7.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/8.png">
+						<img class="playing-card" src="../assets/cards/clubs/9.png">
 					</div>
 				</div>
 			</div>
@@ -136,7 +166,39 @@
 				<button class="clear-selection">Clear selection</button>
 			</div>
 			<div id="bottom" class="player-bottom">
-				<div class="player-bottom-hand"> 
+				<div class="player-bottom-hand"> <img class="playing-card" src="../assets/cards/hearts/2.png">
+					<img class="playing-card rest" src="../assets/cards/hearts/3.png">
+					<img class="playing-card rest" src="../assets/cards/hearts/4.png">
+					<img class="playing-card rest" src="../assets/cards/hearts/5.png">
+					<img class="playing-card rest" src="../assets/cards/hearts/6.png">
+					<img class="playing-card rest" src="../assets/cards/hearts/7.png">
+					<img class="playing-card rest" src="../assets/cards/hearts/8.png">
+					<img class="playing-card rest selected" src="../assets/cards/hearts/9.png">
+					<img class="playing-card rest" src="../assets/cards/spades/2.png">
+					<img class="playing-card rest" src="../assets/cards/spades/3.png">
+					<img class="playing-card rest" src="../assets/cards/spades/4.png">
+					<img class="playing-card rest" src="../assets/cards/spades/5.png">
+					<img class="playing-card rest" src="../assets/cards/spades/6.png">
+					<img class="playing-card rest" src="../assets/cards/spades/7.png">
+					<img class="playing-card rest" src="../assets/cards/spades/8.png">
+					<img class="playing-card rest" src="../assets/cards/spades/9.png">
+					<img class="playing-card rest" src="../assets/cards/spades/10.png">
+					<img class="playing-card rest" src="../assets/cards/diamonds/2.png">
+					<img class="playing-card rest" src="../assets/cards/diamonds/3.png">
+					<img class="playing-card rest" src="../assets/cards/diamonds/4.png">
+					<img class="playing-card rest" src="../assets/cards/diamonds/5.png">
+					<img class="playing-card rest" src="../assets/cards/diamonds/6.png">
+					<img class="playing-card rest" src="../assets/cards/diamonds/7.png">
+					<img class="playing-card rest" src="../assets/cards/diamonds/8.png">
+					<img class="playing-card rest" src="../assets/cards/diamonds/9.png">
+					<img class="playing-card rest" src="../assets/cards/clubs/2.png">
+					<img class="playing-card rest" src="../assets/cards/clubs/3.png">
+					<img class="playing-card rest" src="../assets/cards/clubs/4.png">
+					<img class="playing-card rest" src="../assets/cards/clubs/5.png">
+					<img class="playing-card rest" src="../assets/cards/clubs/6.png">
+					<img class="playing-card rest" src="../assets/cards/clubs/7.png">
+					<img class="playing-card rest" src="../assets/cards/clubs/8.png">
+					<img class="playing-card rest" src="../assets/cards/clubs/9.png">
 				</div>
 			</div>
 		</div>
@@ -158,6 +220,7 @@
 <!-- JavaScript -->
 <script src="./index.js"></script>	
 <script src="./main.mjs" type="module"></script>
+<script src="./loadCards.mjs" type="module"></script>
 
 </body>
 
