--- a/web/index/index.html
+++ b/web/index/index.html
@@ -39,47 +39,49 @@
 <body>
 	<div id="table" class="col-9">
 		<div class="view-left col-2">
-			<div id="left" class="player-left">
-				<div class="player-left-hand">
-					<img class="playing-card" src="../assets/cards/hearts/2.png">
-					<img class="playing-card rest" src="../assets/cards/hearts/3.png">
-					<img class="playing-card rest" src="../assets/cards/hearts/4.png">
-					<img class="playing-card rest" src="../assets/cards/hearts/5.png">
-					<img class="playing-card rest" src="../assets/cards/hearts/6.png">
-					<img class="playing-card rest" src="../assets/cards/hearts/7.png">
-					<img class="playing-card rest" src="../assets/cards/hearts/8.png">
-					<img class="playing-card rest" src="../assets/cards/hearts/9.png">
-					<img class="playing-card rest" src="../assets/cards/spades/2.png">
-					<img class="playing-card rest" src="../assets/cards/spades/3.png">
-					<img class="playing-card rest" src="../assets/cards/spades/4.png">
-					<img class="playing-card rest" src="../assets/cards/spades/5.png">
-					<img class="playing-card rest" src="../assets/cards/spades/6.png">
-					<img class="playing-card rest" src="../assets/cards/spades/7.png">
-					<img class="playing-card rest" src="../assets/cards/spades/8.png">
-					<img class="playing-card rest" src="../assets/cards/spades/9.png">
-					<img class="playing-card rest" src="../assets/cards/diamonds/2.png">
-					<img class="playing-card rest" src="../assets/cards/diamonds/3.png">
-					<img class="playing-card rest" src="../assets/cards/diamonds/4.png">
-					<img class="playing-card rest" src="../assets/cards/diamonds/5.png">
-					<img class="playing-card rest" src="../assets/cards/diamonds/6.png">
-					<img class="playing-card rest" src="../assets/cards/diamonds/7.png">
-					<img class="playing-card rest" src="../assets/cards/diamonds/8.png">
-					<img class="playing-card rest" src="../assets/cards/diamonds/9.png">
-					<img class="playing-card rest" src="../assets/cards/clubs/2.png">
-					<img class="playing-card rest" src="../assets/cards/clubs/3.png">
-					<img class="playing-card rest" src="../assets/cards/clubs/4.png">
-					<img class="playing-card rest" src="../assets/cards/clubs/5.png">
-					<img class="playing-card rest" src="../assets/cards/clubs/6.png">
-					<img class="playing-card rest" src="../assets/cards/clubs/7.png">
-					<img class="playing-card rest" src="../assets/cards/clubs/8.png">
-					<img class="playing-card rest" src="../assets/cards/clubs/9.png">
+			<div class="view-left-fixed">
+				<div id="left" class="player">
+					<div class="hand">
+						<img class="playing-card" src="../assets/cards/hearts/2.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/3.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/4.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/5.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/6.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/7.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/8.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/9.png">
+						<img class="playing-card rest" src="../assets/cards/spades/2.png">
+						<img class="playing-card rest" src="../assets/cards/spades/3.png">
+						<img class="playing-card rest" src="../assets/cards/spades/4.png">
+						<img class="playing-card rest" src="../assets/cards/spades/5.png">
+						<img class="playing-card rest" src="../assets/cards/spades/6.png">
+						<img class="playing-card rest" src="../assets/cards/spades/7.png">
+						<img class="playing-card rest" src="../assets/cards/spades/8.png">
+						<img class="playing-card rest" src="../assets/cards/spades/9.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/2.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/3.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/4.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/5.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/6.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/7.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/8.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/9.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/2.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/3.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/4.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/5.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/6.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/7.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/8.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/9.png">
+					</div>
 				</div>
 			</div>
 		</div>
 		<div class="view-center col-8">
 			<div id="top" class="view-top">
-				<div class="player-top">
-					<div class="player-top-hand">
+				<div class="player">
+					<div class="hand">
 						<img class="playing-card" src="../assets/cards/hearts/2.png">
 						<img class="playing-card rest" src="../assets/cards/hearts/3.png">
 						<img class="playing-card rest" src="../assets/cards/hearts/4.png">
@@ -116,10 +118,32 @@
 				</div>
 			</div>
 			<div class="view-middle">
+				<div class="played col-3">
+					<div class="left">
+						<img src="../assets/cards/diamonds/7.png">
+						<img src="../assets/cards/diamonds/8.png">
+					</div>
+				</div>
+				<div class="played col-6">
+					<div class="top">
+						<img src="../assets/cards/diamonds/7.png">
+						<img src="../assets/cards/diamonds/8.png">
+					</div>
+					<div class="bottom">
+						<img src="../assets/cards/diamonds/7.png">
+						<img src="../assets/cards/diamonds/8.png">
+					</div>
+				</div>
+				<div class="played col-3">
+					<div class="right">
+						<img src="../assets/cards/diamonds/7.png">
+						<img src="../assets/cards/diamonds/8.png">
+					</div>
+				</div>
 			</div>
 			<div id="bottom" class="view-bottom">
-				<div class="player-bottom">
-					<div class="player-bottom-hand"> 
+				<div class="player">
+					<div class="hand"> 
 						<img class="playing-card" src="../assets/cards/hearts/2.png">
 						<img class="playing-card rest" src="../assets/cards/hearts/3.png">
 						<img class="playing-card rest" src="../assets/cards/hearts/4.png">
@@ -158,40 +182,42 @@
 			</div>
 		</div>
 		<div class="view-right col-2">
-			<div id="right" class="player-right">
-				<div class="player-right-hand">
-					<img class="playing-card rest" src="../assets/cards/hearts/2.png">
-					<img class="playing-card rest" src="../assets/cards/hearts/3.png">
-					<img class="playing-card rest" src="../assets/cards/hearts/4.png">
-					<img class="playing-card rest" src="../assets/cards/hearts/5.png">
-					<img class="playing-card rest" src="../assets/cards/hearts/6.png">
-					<img class="playing-card rest" src="../assets/cards/hearts/7.png">
-					<img class="playing-card rest" src="../assets/cards/hearts/8.png">
-					<img class="playing-card rest" src="../assets/cards/hearts/9.png">
-					<img class="playing-card rest" src="../assets/cards/spades/2.png">
-					<img class="playing-card rest" src="../assets/cards/spades/3.png">
-					<img class="playing-card rest" src="../assets/cards/spades/4.png">
-					<img class="playing-card rest" src="../assets/cards/spades/5.png">
-					<img class="playing-card rest" src="../assets/cards/spades/6.png">
-					<img class="playing-card rest" src="../assets/cards/spades/7.png">
-					<img class="playing-card rest" src="../assets/cards/spades/8.png">
-					<img class="playing-card rest" src="../assets/cards/spades/9.png">
-					<img class="playing-card rest" src="../assets/cards/diamonds/2.png">
-					<img class="playing-card rest" src="../assets/cards/diamonds/3.png">
-					<img class="playing-card rest" src="../assets/cards/diamonds/4.png">
-					<img class="playing-card rest" src="../assets/cards/diamonds/5.png">
-					<img class="playing-card rest" src="../assets/cards/diamonds/6.png">
-					<img class="playing-card rest" src="../assets/cards/diamonds/7.png">
-					<img class="playing-card rest" src="../assets/cards/diamonds/8.png">
-					<img class="playing-card rest" src="../assets/cards/diamonds/9.png">
-					<img class="playing-card rest" src="../assets/cards/clubs/2.png">
-					<img class="playing-card rest" src="../assets/cards/clubs/3.png">
-					<img class="playing-card rest" src="../assets/cards/clubs/4.png">
-					<img class="playing-card rest" src="../assets/cards/clubs/5.png">
-					<img class="playing-card rest" src="../assets/cards/clubs/6.png">
-					<img class="playing-card rest" src="../assets/cards/clubs/7.png">
-					<img class="playing-card rest" src="../assets/cards/clubs/8.png">
-					<img class="playing-card" src="../assets/cards/clubs/9.png">
+			<div class="view-right-fixed">
+				<div id="right" class="player">
+					<div class="hand">
+						<img class="playing-card" src="../assets/cards/hearts/2.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/3.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/4.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/5.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/6.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/7.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/8.png">
+						<img class="playing-card rest" src="../assets/cards/hearts/9.png">
+						<img class="playing-card rest" src="../assets/cards/spades/2.png">
+						<img class="playing-card rest" src="../assets/cards/spades/3.png">
+						<img class="playing-card rest" src="../assets/cards/spades/4.png">
+						<img class="playing-card rest" src="../assets/cards/spades/5.png">
+						<img class="playing-card rest" src="../assets/cards/spades/6.png">
+						<img class="playing-card rest" src="../assets/cards/spades/7.png">
+						<img class="playing-card rest" src="../assets/cards/spades/8.png">
+						<img class="playing-card rest" src="../assets/cards/spades/9.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/2.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/3.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/4.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/5.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/6.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/7.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/8.png">
+						<img class="playing-card rest" src="../assets/cards/diamonds/9.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/2.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/3.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/4.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/5.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/6.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/7.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/8.png">
+						<img class="playing-card rest" src="../assets/cards/clubs/9.png">
+					</div>
 				</div>
 			</div>
 		</div>
